Se añadio la barra de navegación a la pagina index.html

--- a/index.html
+++ b/index.html
@@ -6,5 +6,13 @@
 	<h1>Prueba Git</h1>
 	<b></b>
 	<p><u>Creando un repositorio en GitHub.com</u></p>
+	<b></b>
+	
+	<ul>
+		<li><a href="#">Seccion 1</a></li>
+		<li><a href="#">Seccion 2</a></li>
+		<li><a href="#">Seccion 3</a></li>
+		<li><a href="#">Seccion 4</a></li>
+		<li><a href="#">Seccion 5</a></li>
 </body>
 </html>
